Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36338

AnimatedSprite does not correctly respect 'loops'

    XMLWordPrintable

Details

    • 1670097fa2b0a549a9509ba4c8be13924bd25c4c

    Description

      To reproduce:

      1. Run examples/quick/imageelements/animatedsprite.qml
      2. Note that the speaker only does one rotation, rather than the 3 specified by 'loops'

      I think the issue only occurs when the frames do not fit in a single row, as this code:

      if (m_curFrame > frameAt) //went around
          m_curLoop++;
      

      looks as if it could be triggered when changing rows, and not only when starting a new loop.

      Attachments

        Activity

          People

            smd Jan Arve
            mbrasser Michael Brasser
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: