Fixed AnimatedSprite to respect 'loops' properly

Previously, AnimatedSprite could stop before it had performed its
desired number of loops.

Task-number: QTBUG-36338
Change-Id: I9485886681f55d410786f27b4f6afdc72a058202
Reviewed-by: Michael Brasser <michael.brasser@live.com>