tests/auto/quick/qquickanimatedsprite/qquickanimatedsprite.pro
@@ -12,3 +12,6 @@ CONFIG += parallel_test
 
 QT += core-private gui-private qml-private quick-private network testlib
 DEFINES += QT_DISABLE_DEPRECATED_BEFORE=0
+
+OTHER_FILES += \
+    data/largeAnimation.qml
